[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "pyhocon-rs"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "pyhocon>=0.3.61",
]
[tool.maturin]
features = ["pyo3/extension-module"]
python-source = 'python'
module-name = "pyhocon_rs._core"
